--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
         <h1>Dress Larry Up</h1>
         
         <div class="creator-link">
-            <a href="https://x.com/LarryTheGuySol" target="_blank" class="x-link">
-                🐦 Follow @LarryTheGuySol
+            <a href="https://x.com/DressUpLarrySol" target="_blank" class="x-link">
+                🐦 Follow @DressUpLarrySol
             </a>
         </div>
         
