--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>larry</title>
+    <title>Stickman</title>
     <link rel="icon" type="image/x-icon" href="larry.png">
     <style>
         * {
@@ -248,11 +248,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>Dress Larry Up</h1>
+        <h1>Stickman</h1>
         
         <div class="creator-link">
-            <a href="https://x.com/DressUpLarrySol" target="_blank" class="x-link">
-                🐦 Follow @DressUpLarrySol
+            <a href="https://x.com/i/communities/1931082155276255368" target="_blank" class="x-link">
+                🐦 Join The Community
             </a>
         </div>
         
